# coro1

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  blink.cpp  echo_server.cpp  socket_helpers.hpp
include/co1/: async_main.hpp  awaiters.hpp  backend.hpp  co1.hpp  common.hpp  context.hpp  core_awaitable.hpp  event_queue.hpp  event_queues.hpp  promise.hpp  scheduler.hpp  task.hpp  timer_queue.hpp  utils.hpp
include/co1/backend/: select.hpp
include/co1/detail/: promise.hpp  scheduler.hpp  timer_queue.hpp
include/co1/io_queue/: select.hpp
tests/: test_exception.cpp  test_io_queue_select.cpp  test_queues.cpp  test_timer_queue.cpp
